--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Portal escolar para professores controlar as avaliações aplicadas aos alunos",
   "main": "app.js",
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "test:staged": "jest"
   },
   "keywords": [
     "TDD",
@@ -21,6 +22,7 @@
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.1",
     "husky": "^4.3.0",
-    "jest": "^26.4.2"
+    "jest": "^26.4.2",
+    "lint-staged": "^10.4.0"
   }
 }
